<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D1D72"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:text="@string/label_login_text"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showsTextView" />

    <ImageView
        android:id="@+id/topLeftIllustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/top_left_illustration" />

    <ImageView
        android:id="@+id/topRightIllustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/top_right_illustration" />

    <ImageView
        android:id="@+id/triangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="56dp"
        android:src="@drawable/triangle"
        app:layout_constraintEnd_toStartOf="@+id/showsTextView"
        app:layout_constraintTop_toTopOf="@+id/showsTextView"
        app:layout_constraintBottom_toBottomOf="@+id/showsTextView" />

    <TextView
        android:id="@+id/showsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="176dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="100dp"
        android:text="@string/label_login_title"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLeftIllustration" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/label_login_description"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textInputEmailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.InputLayout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInput"
            style="@style/EmailAndPasswordInputEditText"
            android:hint="@string/hint_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPasswordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.InputLayout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/rememberMeCheckbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmailLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInput"
            style="@style/EmailAndPasswordInputEditText"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/rememberMeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/textPasswordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/checkbox_remember_me"
        android:textColor="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/LoginRegistrationButtonStyle"
        android:text = "@string/button_login"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/rememberMeCheckbox"
        app:layout_constraintBottom_toTopOf="@id/goToRegistrationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goToRegistrationButton"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:text="@string/label_register"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>