<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        app:cardCornerRadius="48dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_picture_description"
            android:src="@drawable/ic_profile_avatar"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Email placeholder"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeProfilePhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/button_change_profile_photo"
        android:textAllCaps="false"
        android:textColor="#52368C"
        android:textSize="16sp"
        app:cornerRadius="25dp"
        app:strokeColor="#52368C"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#52368C"
        android:text="@string/button_logout"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="25dp" />


</LinearLayout>
