<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ThemeOverlay.AppCompat.ActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:expandedTitleGravity="bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="SHOW NAME">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_button"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/detailsAddReviewButton"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/showImage"
                android:layout_width="344dp"
                android:layout_height="352dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_stranger_things"
                android:contentDescription="@string/show_poster_description" />

            <TextView
                android:id="@+id/showDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="Description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_reviews_text"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/label_no_reviews"
                android:textColor="@android:color/darker_gray" />

            <RatingBar
                android:id="@+id/showDetailsRatingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:progressTint="#3D1D72"
                android:rating="0"
                android:stepSize="0.01" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/view_review_item" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detailsAddReviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:letterSpacing="0.05"
        android:text="@string/button_write_review"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="12dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>